Add SQL Server Testcontainers integration tests